<resources>
    <string name="app_name">Contacts Sharing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_sharing_app">Contact Sharing App</string>
    <string name="we_need_your_mobile_number_for_login">We need your mobile number for login</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="_123456789">xxxxxxxxxx</string>
    <string name="next">Next</string>
    <string name="verify_login"><![CDATA[Verify & Login]]></string>
    <string name="done">Done</string>
    <string name="resend">Resend</string>
    <string name="verify">Verify</string>
    <string name="select_contact">Select Contacts</string>
    <string name="notification">Notification</string>
    <string name="name">Name</string>
    <string name="danny_would_like_to_share_contacts_with_you">Danny would like to share contacts with you</string>
    <string name="save">Save</string>
    <string name="shared_contacts">Shared Contacts</string>
    <string name="received_contacts">Received Contacts</string>
    <string name="your_name">Your name</string>
    <string name="profile_info">Profile Info</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="error_form_empty_field_of">Please enter %s</string>
    <string name="erro_contain_country_code">write number without country code</string>
    <string name="prompt_search">hint</string>
    <string name="denny">Denny</string>
    <string name="default_notification_channel_id">def</string>
    <string name="not_valid_phone_number">Phone number is not valid</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="no_internet_connection">No internet connection, please try again later.</string>
</resources>