<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"

    android:fitsSystemWindows="true"
    android:windowSoftInputMode="stateHidden|stateHidden">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_16sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_16sdp"
        android:paddingBottom="@dimen/_30sdp">

        <RelativeLayout
            android:id="@+id/rlHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_4sdp"
            android:paddingEnd="@dimen/_4sdp">

            <ImageView
                android:layout_alignBottom="@id/header_title"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_baseline_arrow_back_ios_24" />

            <TextView
                android:id="@+id/header_title"
                style="@style/AppTextViewBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:gravity="center"
                android:textSize="@dimen/_16sdp"
                android:text="@string/verify_login"
                android:textColor="@color/app_color_blue" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/header_title"
                android:gravity="center"
                android:maxLines="1"
                android:text="Login using OTP sent to +923062196778"
                android:textSize="@dimen/_10sdp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/ivBg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_below="@id/rlHeader"
            android:layout_margin="@dimen/_20sdp"
            android:src="@drawable/ic_otp_bg" />

        <RelativeLayout
            android:id="@+id/rlOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivBg"
            android:gravity="center">

            <com.goodiebag.pinview.Pinview
                android:id="@+id/pinview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:elevation="@dimen/_14sdp"
                app:cursorVisible="true"
                app:forceKeyboard="false"
                app:inputType="number"
                app:password="false"
                app:pinBackground="@drawable/otpview_drawable"
                app:pinHeight="@dimen/_30sdp"
                app:pinLength="6"
                app:pinWidth="@dimen/_30sdp" />

            <TextView
                android:id="@+id/btnResendOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pinview"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_13sdp"
                android:text="@string/resend" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/pinview"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/_13sdp"
                android:text="@string/verify" />

        </RelativeLayout>


        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rlOtp"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="bottom">

            <soup.neumorphism.NeumorphButton
                android:id="@+id/btnDone"
                style="@style/ButtonShape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/done" />
        </RelativeLayout>

        <include
            android:id="@+id/loadingLayout"
            layout="@layout/loadin_layout"
            />
    </RelativeLayout>


</ScrollView>