<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:gravity="center">

    <ImageView
        android:layout_margin="@dimen/_2sdp"
        android:id="@+id/ivUserImage"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/round_shape"
        android:src="@drawable/logo" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_toEndOf="@id/ivUserImage">

        <LinearLayout
            android:id="@+id/lnrContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/userName"
                style="@style/AppTextViewBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="start"
                android:maxLines="1"

                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/userPhoneNumber"
                style="@style/AppTextViewNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:maxLines="1"
                android:text="+123456789"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/notificationMessage"
                style="@style/AppTextViewNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:gravity="start"
                android:maxLines="1"
                android:text="@string/danny_would_like_to_share_contacts_with_you"
                android:textColor="@color/black"
                android:textSize="@dimen/_9sdp"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/rlFinalStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lnrContent"
            android:layout_marginTop="@dimen/_8sdp"
            android:visibility="gone">

            <TextView

                android:id="@+id/finalStatus"
                style="@style/AppTextViewBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="Accepted"
                android:textColor="@color/app_color_blue"
                android:textSize="@dimen/_10sdp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlStatuses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/lnrContent"
            android:layout_marginTop="@dimen/_8sdp">

            <TextView
                android:id="@+id/btnAccept"
                style="@style/RoundedButtonStrokeBlue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:fontFamily="@font/poppins_regular"
                android:paddingStart="@dimen/_18sdp"
                android:paddingTop="@dimen/_2sdp"
                android:paddingEnd="@dimen/_18sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:text="@string/accept"
                app:cornerRadius="@dimen/_12sdp" />

            <TextView
                android:id="@+id/btnReject"
                style="@style/RoundedButtonStrokeBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16sdp"

                android:layout_toEndOf="@id/btnAccept"
                android:fontFamily="@font/poppins_regular"
                android:paddingStart="@dimen/_18sdp"
                android:paddingTop="@dimen/_2sdp"
                android:paddingEnd="@dimen/_18sdp"
                android:paddingBottom="@dimen/_2sdp"
                android:text="@string/decline"
                app:cornerRadius="@dimen/_12sdp" />

        </RelativeLayout>


    </RelativeLayout>


</RelativeLayout>
