<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    android:windowSoftInputMode="stateHidden|stateHidden">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/_8sdp"
        android:paddingTop="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:paddingBottom="@dimen/_30sdp"
        tools:context=".activities.SignUpActivity">

        <RelativeLayout
            android:id="@+id/rlHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true">

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                android:visibility="gone" />

            <TextView

                android:id="@+id/header_title"
                style="@style/AppTextViewBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="@string/enter_mobile_number"
                android:textColor="@color/app_color_blue" />

            <TextView
                style="@style/AppTextViewNormal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/header_title"
                android:gravity="center"
                android:maxLines="1"
                android:text="@string/we_need_your_mobile_number_for_login"
                android:textColor="@color/black"
                android:textSize="@dimen/_10sdp" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/ivBg"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_below="@id/rlHeader"
            android:layout_margin="@dimen/_12sdp"
            android:src="@drawable/ic_otp_bg" />

        <LinearLayout

            android:id="@+id/rlPhoneNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ivBg"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_4sdp"

            android:gravity="center">

            <com.hbb20.CountryCodePicker
                android:id="@+id/etCountryCode"
                style="@style/AppTextViewNormal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_arrowSize="@dimen/_12sdp"
                app:ccp_autoDetectCountry="true"
                app:ccp_autoDetectLanguage="true"
                app:ccp_autoFormatNumber="true"
                app:ccp_countryAutoDetectionPref="SIM_ONLY"
                app:ccp_defaultLanguage="ENGLISH"
                app:ccp_defaultNameCode="PK"
                app:ccp_rememberLastSelection="true"
                app:ccp_showFlag="true"
                app:ccp_textSize="@dimen/_12sdp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhoneNumber"
                style="@style/AppTextViewNormal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="viewStart"
                android:layout_weight="2"
                android:hint="@string/_123456789"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:textColor="@color/black"
                tools:ignore="RtlCompat" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/rlPhoneNo"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/_30sdp"
            android:gravity="bottom">

            <com.google.android.material.button.MaterialButton

                android:id="@+id/btnNext"
                style="@style/RoundedButtonBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:text="@string/next" />
        </RelativeLayout>


    </RelativeLayout>

</ScrollView>